...
                                                <visibilityPriorities>
                                                    <integer value="1000"/>
                                                </visibilityPriorities>
                                                <customSpacing>
                                                    <real value="3.4028234663852886e+38"/>
                                                </customSpacing>
                                                <accessibility identifier="ReviewLabel"/>
                                            </stackView>
                                            <stackView focusRingType="none" distribution="fillEqually" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1AK-MW-qsc">
                                                <rect key="frame" x="79" y="2" width="200" height="21"/>
                                                <subviews>
                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WVY-D9-AAX">
                                                        <rect key="frame" x="-7" y="-7" width="110" height="33"/>
...
