...
                                    <constraint firstAttribute="height" constant="75" id="5Gb-Xg-seV"/>
                                    <constraint firstItem="7rh-Lu-bXY" firstAttribute="top" secondItem="7cF-j3-JRf" secondAttribute="top" id="Ibp-cf-eH1"/>
                                    <constraint firstAttribute="trailing" secondItem="7rh-Lu-bXY" secondAttribute="trailing" id="cHh-NY-5xT"/>
                                    <constraint firstAttribute="bottom" secondItem="7rh-Lu-bXY" secondAttribute="bottom" id="erG-3T-NxN"/>
                                    <constraint firstItem="7rh-Lu-bXY" firstAttribute="leading" secondItem="7cF-j3-JRf" secondAttribute="leading" id="fPm-mQ-0kM"/>
                                </constraints>
                                <accessibility identifier="UpcomingEventView"/>
                            </customView>
                            <customView wantsLayer="YES" focusRingType="none" translatesAutoresizingMaskIntoConstraints="NO" id="YQL-kL-NAx">
                                <rect key="frame" x="0.0" y="0.0" width="350" height="40"/>
                                <subviews>
                                    <button toolTip="Options" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="M9q-iF-MaE">
                                        <rect key="frame" x="300" y="7" width="30" height="26"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="18" id="8yd-3c-2Nc"/>
                                            <constraint firstAttribute="width" constant="29" id="D7P-eC-faV"/>
                                        </constraints>
                                        <accessibility identifier="FloatingPin"/>
                                        <connections>
                                            <action selector="convertToFloatingWindow:" target="-2" id="qOh-xO-afp"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Copy All Times" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GMo-5B-bnh">
                                        <rect key="frame" x="99" y="7" width="30" height="26"/>
...
